--- a/assets/styles/utils.css
+++ b/assets/styles/utils.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
 *,
 *::before,
 *::after {
@@ -20,10 +18,8 @@
 }
 
 body {
+    padding: 1rem;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     background-color: var(--background);
@@ -33,7 +29,6 @@ body {
 
 button {
     background-color: var(--secondary);
-    border-radius: 50%;
     border: none;
 }
 
