--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,11 +1,17 @@
+.layout {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 header {
     display: flex;
     align-items: center;
     background-color: var(--primary);
     height: 10vh;
-    margin: 1.5rem;
     padding: 1rem;
-    border-radius: 45px;
+    border-radius: 40px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -14,28 +20,275 @@ header h1 {
 }
 
 main {
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
-    margin: 1.5rem;
-    padding: 1rem;
+    justify-content: space-between;
+    padding: 1.5rem;
 }
 
+.container {
+    display: flex;
+}
+
+.container .card {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    border-radius: 24px;
+    background-color: var(--primary);
+    flex-grow: 0;
+    line-height: 1.1;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.card .book {
+    display: flex;
+    flex-direction: column;
+}
+
+.card img {
+    border-radius: 12px;
+    align-self: center;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.card .title {
+    margin-top: 1rem;
+    font-size: 20px;
+}
+
+.card .author {
+    font-size: 18px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 90px;
+    height: 34px;
+    align-self: flex-end;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    display: flex;
+    align-items: center;
+    border-radius: 34px;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--text);
+    -webkit-transition: 300ms;
+    transition: 300ms;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.slider p {
+    margin-left: 0.75rem;
+    cursor: pointer;
+    color: var(--text);
+    user-select: none;
+}
+
+.slider:before {
+    border-radius: 50%;
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: var(--secondary);
+    -webkit-transition: 300ms;
+    transition: 300ms;
+}
+
+input:checked+.slider {
+    background-color: var(--secondary);
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px var(--secondary);
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(55px);
+    -ms-transform: translateX(55px);
+    transform: translateX(55px);
+    background-color: var(--text);
+}
+
+main .add {
+    border-radius: 50%;
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
+    width: 71px;
+    height: 71px;
+    cursor: pointer;
+    transition: ease-in-out 250ms;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+main .add:hover {
+    scale: 1.1;
+}
 
 dialog {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: var(--primary);
     border-radius: 24px;
-    padding: 1em;
+    padding: 1rem;
+    height: 400px;
     max-width: 50ch;
-    border: 0;
-    box-shadow: 0 0 1em rgb(0 0 0 / .3);
+    border: none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    transition: 125ms ease-in;
 
     &>* {
-        margin: 0 0 0.5rem 0;
+        margin: 0;
     }
+}
+
+.open {
+    display: flex;
+}
+
+dialog form {
+    display: flex;
+    gap: 1.5rem;
+}
+
+dialog > button {
+    align-self: flex-end;
+    border-radius: 12px;
+    color: var(--text);
+    padding: 1rem;
+    border: none;
+    cursor: pointer;
+    transition: 250ms all ease-in-out;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+dialog .close {
+    background-color: var(--text);
+    border-radius: 50%;
+    padding: 0;
+    width: 30px;
+}
+
+dialog > button:hover {
+    scale: 1.1;
+}
+
+form .canvas {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 300px;
+    background-color: var(--background);
+    border-radius: 12px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: var(--text);
+}
+
+.canvas input[type="file"] {
+    display: none;
+}
+
+.canvas .upload-image {
+    border: 1px solid var(--text);
+    border-radius: 12px;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    transition: all 250ms ease-in-out;
+    user-select: none;
+}
+
+.canvas .upload-image:hover {
+    scale: 1.1;
+}
+
+form .details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.details input[type="text"] {
+    padding: 1rem;
+    border-radius: 12px;
+    border: none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.details ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content: space-evenly;
+    color: var(--text);
+}
+
+.details ul li {
+    display: flex;
+    align-items: center;
+}
+
+.details ul li label {
+    margin-left: 0.5rem;
+}
+
+.details input[type="radio"] {
+    width: 20px;
+    height: 20px;
+    border: 2px solid var(--background);
+    border-radius: 10px;
+    appearance: none;
+    background-color: var(--text);
+}
+
+.details input[type="radio"]::before {
+    display: block;
+    content: " ";
+    width: 10px;
+    height: 10px;
+    border-radius: 6px;
+    background-color: var(--secondary);
+    font-size: 1em;
+    transform: translate(3px, 3px) scale(0);
+    transform-origin: center;
+    transition: all 300ms ease-in-out;
+}
+
+input[type="radio"]:checked::before {
+    transform: translate(3px, 3px) scale(1);
+    transition: all 0.3s cubic-bezier(0.25, 0.25, 0.56, 2);
 }
 
 footer {
     display: flex;
-    padding: 1.5rem;
+    padding: 1rem;
     align-items: center;
     justify-content: center;
     gap: 10px;
