Change layout of container to grid

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -27,14 +27,20 @@ main {
     padding: 1.5rem;
 }
 
-.container {
-    display: flex;
+.container { 
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    gap: 1.5rem;
+
+    padding: 1rem;
 }
 
 .container .card {
+    justify-self: center;
     display: flex;
     flex-direction: column;
     padding: 1rem;
+    width: 260px;
     border-radius: 24px;
     background-color: var(--primary);
     flex-grow: 0;
@@ -48,6 +54,9 @@ main {
 }
 
 .card img {
+    width: 200px;
+    height: 300px;
+    object-fit: cover;
     border-radius: 12px;
     align-self: center;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -175,7 +184,7 @@ dialog form {
     gap: 1.5rem;
 }
 
-dialog > button {
+dialog>button {
     align-self: flex-end;
     border-radius: 12px;
     color: var(--text);
@@ -193,8 +202,12 @@ dialog .close {
     width: 30px;
 }
 
-dialog > button:hover {
+dialog>button:not(:disabled):hover {
     scale: 1.1;
+}
+
+dialog>button:disabled {
+    background-color: #507eaf;
 }
 
 form .canvas {
@@ -240,6 +253,17 @@ form .details {
     border-radius: 12px;
     border: none;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.exists::after {
+    content: "" attr(data-help) "";
+    color: #d81d1d;
+    font-size: 12px;
+}
+
+.title-div {
+    display: flex;
+    flex-direction: column;
 }
 
 .details ul {
