--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -27,7 +27,7 @@ main {
     padding: 1.5rem;
 }
 
-.container { 
+.container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     gap: 1.5rem;
@@ -212,6 +212,7 @@ dialog>button:disabled {
 
 form .canvas {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 200px;
@@ -230,11 +231,18 @@ form .canvas {
     border: 1px solid var(--text);
     border-radius: 12px;
     display: inline-block;
+    position: absolute;
     padding: 6px 12px;
     cursor: pointer;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     transition: all 250ms ease-in-out;
     user-select: none;
+    z-index: 1;
+}
+
+.canvas #imagePreview {
+    border-radius: 12px;
+    object-fit: cover;
 }
 
 .canvas .upload-image:hover {
