Change background color of disabled button

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -223,7 +223,7 @@ dialog>button:not(:disabled):hover {
 }
 
 dialog>button:disabled {
-    background-color: #507eaf;
+    background-color: #182634;
 }
 
 form .canvas {
